--- a/toDo.txt
+++ b/toDo.txt
@@ -42,7 +42,7 @@ generational selection
     gradual replacement
 
 
-hyperparameter: 초기 인구 수, selection 시 몇 개 뽑을지, crossover 시 rate, mutation 시 rate
+hyperparameter: 초기 인구 수, selection 시 몇 개 뽑을지, number of loop, crossover 시 rate, mutation 시 rate, 
 
 DFS
 
